Align items on start page correctly, apply basic color palette

--- a/source/styles/start_page.css
+++ b/source/styles/start_page.css
@@ -5,14 +5,103 @@
 html, body, .container-table {
     height: 100%;
     width: 100%;
+    background-color: #17243A;
 }
-.container-table {
-    display: table;
-}
-.vertical-center-row {
-    display: table-cell;
+
+.row {
+    height: 100%;
     vertical-align: middle;
 }
-#submit-form {
-    text-align: center;
+
+.line {
+    border-right: 2px solid white;
+    height: 60%;
+    width: 100%;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.vcenter{
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.form-container {
+    padding-top: 2em;
+    padding-bottom: 2em;
+}
+
+.input-container {
+    padding: 1em 0em 1em 0em;
+    position: relative;
+    margin-bottom: 45px;
+}
+
+.submit-form {
+    padding-top: 2em;
+}
+
+input {
+    font-size: 1rem;
+    display: block;
+    width: auto;
+    border: none;
+    border-bottom: 1px solid white;
+    background-color: #17243A;
+}
+
+input:focus {
+    outline: none;
+}
+
+label {
+    color: white;
+    font-size: 18px;
+    font-weight: normal;
+    position: absolute;
+    pointer-events: none;
+    left: 5px;
+    top: 10px;
+    transition: 0.2s ease all;
+}
+
+
+/* active state */
+
+input:focus~label, input:valid~label {
+    top: -20px;
+    font-size: 14px;
+    color: #B7760E;
+}
+
+.bar {
+    position: relative;
+    display: block;
+    width: 300px;
+}
+
+.bar:before, .bar:after {
+    content: '';
+    height: 2px;
+    width: 0;
+    bottom: 1px;
+    position: absolute;
+    background: #B7760E;
+    transition: 0.2s ease all;
+}
+
+.bar:before {
+    left: 50%;
+}
+
+.bar:after {
+    right: 50%;
+}
+
+
+/* active state */
+
+input:focus~.bar:before, input:focus~.bar:after {
+    width: 10em;
 }
