--- a/source/styles/theme.css
+++ b/source/styles/theme.css
@@ -5,6 +5,7 @@
 
 h1, h2, h3, h4 {
     font-family: "Sansita", sans-serif;
+    color: #B7760E;
 }
 p, a {
     font-family: "Open Sans", sans-serif;
